<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/dump_image_data" android:title="@string/dump_img_data" />

	<item android:id="@+id/about" android:title="@string/about" />

	<item android:id="@+id/quit" android:title="@string/quit" />

	<item android:id="@+id/populate_list" android:title="@string/populate_list" />

	<item android:id="@+id/set_creds" android:title="@string/set_creds" />

	<!-- <item android:id="@+id/friends_list" android:title="@string/friends_list" 
		/> -->


	<item android:id="@+id/test_api" android:title="@string/test_api" />

	<item android:id="@+id/test_api2" android:title="@string/test_api2" />

	<item android:id="@+id/friends_list" android:title="@string/friends_list" />

	


	<!-- <item android:id="@+id/hash_video_file" android:title="@string/hash_video_file" 
		/> <item android:id="@+id/flip_algo" android:title="@string/flip_algo" /> -->


</menu>